updated the base url to the correct one and made the toast to show correctly on mobile

--- a/src/Pages/SharedComponents/TopNavigation/TopNavigation.module.css
+++ b/src/Pages/SharedComponents/TopNavigation/TopNavigation.module.css
@@ -355,7 +355,7 @@
 
   #header__top {
     position: fixed;
-    z-index: 9999999;
+    z-index: 1;
     left: 0;
     top: 0;
     right: 0;
